@@ -17,17 +17,20 @@
  * 
  * =============================================================================
  */
-package org.jasypt.hibernate.type;
+package org.jasypt.hibernate3.type;
 
-import org.jasypt.hibernate.encryptor.HibernatePBEEncryptorRegistry;
-import org.jasypt.hibernate.encryptor.HibernatePBEStringEncryptor;
+import java.util.Calendar;
+import java.util.Properties;
+import java.util.TimeZone;
 
-
+import org.jasypt.commons.CommonUtils;
+import org.jasypt.hibernate3.encryptor.HibernatePBEEncryptorRegistry;
+import org.jasypt.hibernate3.encryptor.HibernatePBEStringEncryptor;
 
 /**
  * <p>
  * A <b>Hibernate</b> <tt>UserType</tt> implementation which allows 
- * encryption of Byte values into String (VARCHAR) database fields
+ * encryption of Calendar values into String (VARCHAR) database fields
  * during persistence of entities.
  * </p>
  * <p>
@@ -43,13 +46,14 @@ import org.jasypt.hibernate.encryptor.HibernatePBEStringEncryptor;
  * <pre>
  *  &lt;hibernate-mapping package="myapp">
  *    ...
- *    &lt;typedef name="<b>encryptedByteAsString</b>" class="org.jasypt.hibernate.type.EncryptedByteAsStringType">
+ *    &lt;typedef name="<b>encryptedCalendarAsString</b>" class="org.jasypt.hibernate.type.EncryptedCalendarAsStringType">
  *      &lt;param name="encryptorRegisteredName"><b><i>myHibernateStringEncryptor</i></b>&lt;/param>
+ *      &lt;param name="storeTimeZone"><b><i>true</i></b>&lt;/param>
  *    &lt;/typedef>
  *    ...
  *    &lt;class name="UserData" table="USER_DATA">
  *      ...
- *      &lt;property name="salary" column="SALARY" type="<b>encryptedByteAsString</b>" />
+ *      &lt;property name="birth" column="BIRTH" type="<b>encryptedCalendarAsString</b>" />
  *      ...
  *    &lt;class>
  *    ...
@@ -63,6 +67,11 @@ import org.jasypt.hibernate.encryptor.HibernatePBEStringEncryptor;
  * {@link HibernatePBEStringEncryptor} and {@link HibernatePBEEncryptorRegistry}). 
  * </p>
  * <p>
+ * The boolean <tt>storeTimeZone</tt> parameter allows the Calendar to be 
+ * re-created with the same TimeZone that it was created. This is an 
+ * <b>optional</b> parameter, and its default value is <b>FALSE</b>.
+ * </p>
+ * <p>
  * Or, if you prefer to avoid registration of encryptors, you can configure
  * your encryptor directly in the mapping file (although not recommended), 
  * like this:
@@ -71,15 +80,16 @@ import org.jasypt.hibernate.encryptor.HibernatePBEStringEncryptor;
  * <pre>
  *  &lt;hibernate-mapping package="myapp">
  *    ...
- *    &lt;typedef name="<b>encryptedByteAsString</b>" class="org.jasypt.hibernate.type.EncryptedByteAsStringType">
+ *    &lt;typedef name="<b>encryptedCalendarAsString</b>" class="org.jasypt.hibernate.type.EncryptedCalendarAsStringType">
  *      &lt;param name="algorithm"><b><i>PBEWithMD5AndTripleDES</i></b>&lt;/param>
  *      &lt;param name="password"><b><i>XXXXX</i></b>&lt;/param>
  *      &lt;param name="keyObtentionIterations"><b><i>1000</i></b>&lt;/param>
+ *      &lt;param name="storeTimeZone"><b><i>true</i></b>&lt;/param>
  *    &lt;/typedef>
  *    ...
  *    &lt;class name="UserData" table="USER_DATA">
  *      ...
- *      &lt;property name="salary" column="SALARY" type="<b>encryptedByteAsString</b>" />
+ *      &lt;property name="birth" column="BIRTH" type="<b>encryptedCalendarAsString</b>" />
  *      ...
  *    &lt;class>
  *    ...
@@ -93,26 +103,64 @@ import org.jasypt.hibernate.encryptor.HibernatePBEStringEncryptor;
  * </p>
  * 
  * 
- * @since 1.2
+ * @since 1.9.0 (class existed in package
+ *            org.jasypt.hibernate.type since 1.2)
  * 
  * @author Daniel Fern&aacute;ndez
  * 
- * @deprecated Will be removed in 1.11. Package org.jasypt.hibernate.connectionprovider
- *             has been renamed as org.jasypt.hibernate3.connectionprovider.
- * 
  */
-public final class EncryptedByteAsStringType extends AbstractEncryptedAsStringType{
+public final class EncryptedCalendarAsStringType extends AbstractEncryptedAsStringType{
+
+    private Boolean storeTimeZone = Boolean.FALSE;
 
     /**
      * @see org.jasypt.hibernate.type.AbstractEncryptedAsStringType#convertToObject(java.lang.String)
      */
     protected Object convertToObject(final String string) {
-       return new Byte(string);
+        final String[] stringTokens = CommonUtils.split(string);
+        TimeZone tz = null;
+        final long timeMillis = Long.valueOf(stringTokens[0]).longValue();
+        if (this.storeTimeZone.booleanValue()) {
+            tz = TimeZone.getTimeZone(stringTokens[1]);
+        } else {
+            tz = TimeZone.getDefault();
+        }
+        final Calendar cal = Calendar.getInstance();
+        cal.setTimeZone(tz);
+        cal.setTimeInMillis(timeMillis);
+        return cal;
     }
+
+
+    /**
+     * @see org.jasypt.hibernate.type.AbstractEncryptedAsStringType#convertToString(java.lang.Object)
+     */
+    protected String convertToString(final Object object) {
+        final StringBuffer strBuff = new StringBuffer();
+        final long timeMillis = ((Calendar) object).getTimeInMillis();
+        strBuff.append((new Long(timeMillis)).toString());
+        if (this.storeTimeZone.booleanValue()) {
+            strBuff.append(" ");
+            strBuff.append(((Calendar) object).getTimeZone().getID());
+        }
+        return strBuff.toString();
+    }
+ 
+    
+    public synchronized void setParameterValues(final Properties parameters) {
+        
+      	super.setParameterValues(parameters);
+      	
+        final String paramStoreTimeZone = parameters.getProperty(ParameterNaming.STORE_TIME_ZONE);
+        if ((paramStoreTimeZone != null) && (!paramStoreTimeZone.trim().equals(""))) {
+            this.storeTimeZone = CommonUtils.getStandardBooleanValue(paramStoreTimeZone);
+        }
+        
+    }
+
 
     public Class returnedClass() {
-        return Byte.class;
+        return Calendar.class;
     }
 
-    
 }
